testcases/valid/transitive_closure.shp
class A<p1, p2, p3> where
    p1: [A<p1, p2, p3>],
    p2: [A<p2, p3, p1>],
    p3: [A<p3, p1, p2>]
{
    f: A<none, none, none>;

    fn test() {
        pools q1: L<q1, q2, q3>,
              q2: L<q2, q3, q1>,
              q3: L<q3, q1, q2>;
    }
}

layout L: A = rec{f};
